# Proyecto-Final

./: CMakeLists.txt  DEMO.txt  README.md
src/core/: Contexto.cpp  Contexto.h  Coordenadas.h  Juego.cpp  Juego.h  Principal.cpp  Utils.cpp  Utils.h
src/interfaz/: Consola.cpp  Consola.h  Log.cpp  Log.h  RenderMapa.cpp  RenderMapa.h
src/modelos/Edificios/: Cuartel.cpp  Cuartel.h  Edificio.cpp  Edificio.h  Forja.cpp  Forja.h  Granja.cpp  Granja.h  Torre.cpp  Torre.h
src/modelos/Terrenos/: Agua.cpp  Agua.h  Bosque.cpp  Bosque.h  Llanura.cpp  Llanura.h  Montania.cpp  Montania.h  Pantano.cpp  Pantano.h  Terreno.cpp  Terreno.h
src/modelos/Unidades/: Arquero.cpp  Arquero.h  Caballero.cpp  Caballero.h  Ingeniero.cpp  Ingeniero.h  Mago.cpp  Mago.h  Soldado.cpp  Soldado.h  Unidad.cpp  Unidad.h
src/modelos/control/: Controlador.cpp  Controlador.h  Jugador.cpp  Jugador.h  Sistema.cpp  Sistema.h
src/sistemas/: GestorRecursos.cpp  GestorRecursos.h  IA_Guardian.cpp  IA_Guardian.h  MapaMundo.cpp  MapaMundo.h  MotorEventos.cpp  MotorEventos.h  Persistencia.cpp  Persistencia.h
